# Django-blog-project

./: db.sqlite3  pyproject.toml
blog/: urls.py  views.py
blog_project/: settings.py  urls.py
template/: about.html  base.html  home.html  post.html
